#39 Replace deprecated ctor usages